Added a bunch of content to Heisenberg page.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p>I am a senior undergraduate at the University of Kentucky majoring in Mathematics with minors in Computer Science, History, and Classics.
         My primary interests seem to lie in complex analysis and machine learning. I do research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
         and also in <a class="weblink" href="http://cs.uky.edu/~jacobs/">Nathan Jacobs'</a> computer vision lab. I plan to graduate in Spring 2020 and study mathematics
-        in graduate school. A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information.
+        in graduate school. A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information. Photo is courtesy of Nathan Jacobs.
     </p>
   </div>
 
@@ -57,7 +57,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black">
-          <a class="w3-button w3-black" href="./resampling.htm">Point Cloud Resampling</a>
+          <a class="w3-button w3-black" href="./resampling.html">Point Cloud Resampling</a>
         </div>
         <img src="/w3images/house5.jpg" alt="resampling" style="width:100%">
       </div>
@@ -65,7 +65,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
           <div class="w3-display-topleft w3-black">
-            <a class="w3-button w3-black" href="./heisenberg.htm">Discrete Heisenberg Group</a>
+            <a class="w3-button w3-black" href="./heisenberg.html">Discrete Heisenberg Group</a>
           </div>
         <img src="/w3images/house2.jpg" alt="heisenberg" style="width:100%">
       </div>
@@ -73,7 +73,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black">
-          <a class="w3-button w3-black" href="./assignments.htm">TA Assignments</a>
+          <a class="w3-button w3-black" href="./assignments.html">TA Assignments</a>
         </div>
         <img src="./images/assignments/assignments_graph.png" alt="assignments" style="width:100%">
       </div>
@@ -81,7 +81,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black">
-          <a class="w3-button w3-black" href="./flightroute.htm">Flight Route Estimation</a>
+          <a class="w3-button w3-black" href="./flightroute.html">Flight Route Estimation</a>
         </div>
         <img src="./images/flightroute/franklin_torch_flight.gif" alt="flight route" style="width:100%">
       </div>
@@ -97,7 +97,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black">
-          <a class="w3-button w3-black" href="./visualizations.htm">Visualizing Algebraic Surfaces</a>
+          <a class="w3-button w3-black" href="./visualizations.html">Visualizing Algebraic Surfaces</a>
         </div>
         <img src="./images/visualizations/clebsh1.jpg" alt="Clebsh 27 lines" style="width:99%" image-orientation=from-image>
       </div>
@@ -105,7 +105,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black">
-          <a class="w3-button w3-black" href="./minecraft.htm">Generating Minecraft Worlds</a>
+          <a class="w3-button w3-black" href="./minecraft.html">Generating Minecraft Worlds</a>
         </div>
         <img src="./images/minecraft/mountain overlook.png" alt="minecraft world" style="width:99%">
       </div>
