--- a/visualizations.html
+++ b/visualizations.html
@@ -64,7 +64,8 @@
       <a class="weblink" href="https://en.wikipedia.org/wiki/Clebsch_surface">Clebsh surface</a>. Using <a class="weblink" href="https://www.sagemath.org/">Sage</a> to
       generate the surface and <a class="weblink" href="https://www.blender.org/">Blender</a> to make it look a little more refined, we used the
       University of Kentucky Math Lab's <a class="weblink" href="https://formlabs.com/3d-printers/form-2/">Form 2</a> 3D printer to print it. After a couple
-      of test prints, we finally got a fantastic model to hold and display.
+      of test prints, we finally got a fantastic model to hold and display. Photos are courtesy of Nathan Fieldsteel and
+      <a class="weblink" href="http://www.ms.uky.edu/~dhje223/">Dave Jensen</a>.
     </p>
   </div>
 
