Changed some positionings.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="w3-display-topleft w3-black">
             <a class="w3-button w3-black" href="./heisenberg.html">Discrete Heisenberg Group</a>
           </div>
-        <img src="/w3images/house2.jpg" alt="heisenberg" style="width:100%">
+        <img src="./images/heisenberg/tetra_growth.gif" alt="heisenberg" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
@@ -75,7 +75,7 @@
         <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="./assignments.html">TA Assignments</a>
         </div>
-        <img src="./images/assignments/assignments_graph.png" alt="assignments" style="width:100%">
+        <img src="./images/assignments/assignments.PNG" alt="assignments" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
