Added background section to Assignments page.

--- a/assignments.html
+++ b/assignments.html
@@ -24,7 +24,47 @@
 
 <body>
 
-<p>Webpage under construction.</p>
+
+
+<!--Top navigation bar-->
+<div class="w3-top">
+    <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+        <a href="./index.html" class="w3-bar-item w3-button"><b>Go back</b></a>
+
+        <div class="w3-right w3-hide-small">
+            <a href="#Background" class="w3-bar-item w3-button">Background</a>
+            <a href="#Algorithm" class="w3-bar-item w3-button">Approaches</a>
+        </div>
+    </div>
+</div>
+
+
+<div>
+    <div class="w3-container w3-padding-32" id="Background">
+        <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Background</h3>
+            <div class="w3-container">
+                <p>As the start of a new semester approaches, many many math departments throughout
+                the United States have the task of assigning graduate students to Teaching
+                Assistant (TA) positions. These decisions might be made based on a variety of
+                factors such as the graduate student's mathematical background, time
+                availability, or even the intstuctor's prefence. Usually these assignments
+                might be done by hand or through a committee and so we would like to implement
+                an algorithm to find a feasible assignment.</p>
+                <p>Due to all of the number of graduate students, the number of courses, and
+                the number of constraints imposed, this task is not easy. For this reason, we
+                decided to tackle a similar problem on a smaller number of people and with
+                fewer constraints. Assigning undergraduate students to research groups in the
+                <a class="weblink" href="https://ukmathlab.blogspot.com/">University of Kentucky Math Lab</a>
+                allows us to find a simpler algorithm in this way. The number of students is
+                around 20, the number of groups is around 4, and typically the most important
+                constraints to keep in mind are the time availavbilities of the students and
+                professors leading the research groups, and the students' preferences for
+                which group they want to be a part of.</p>
+            </div>
+    </div>
+</div>
+
+
 
 </body>
 
