--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="./visualizations.html">Visualizing Algebraic Surfaces</a>
         </div>
-        <img src="./images/visualizations/clebsh1.jpg" alt="Clebsh 27 lines" style="width:99%" image-orientation=from-image>
+        <img src="./images/visualizations/clebsh1.jpg" alt="Clebsh 27 lines" style="width:100%" image-orientation=from-image>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
@@ -107,7 +107,7 @@
         <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="./minecraft.html">Generating Minecraft Worlds</a>
         </div>
-        <img src="./images/minecraft/mountain overlook.png" alt="minecraft world" style="width:99%">
+        <img src="./images/minecraft/mountain overlook (small).png" alt="minecraft world" style="width:100%">
       </div>
     </div>
   </div>
