Added footers to all of the pages to acknowledge collaborators.

--- a/heisenberg.html
+++ b/heisenberg.html
@@ -305,6 +305,12 @@
 </body>
 
 
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
+    <p>Investigated with Angela Vichitbanda and Joe Cecil under the mentorship
+    of <a class="weblink" href="http://www.ms.uky.edu/~cama268/">Chris Manon</a>.</p>
+</footer>
+
 
 <script>
 var slideIndex = [1,1];
