--- a/resampling.html
+++ b/resampling.html
@@ -66,6 +66,7 @@
         which is then decoded into an arbitrary resolution point cloud. We also
         have two sets of labels: (1) the latent representation of the mesh of
         the object and (2) the latent representation of the sparse point cloud.</p>
+
         <p>In more detail, we first construct a fixed basis point set for all
         samples. Then we pass an \( N \times 3 \) set of points into an encoder
         network. This then predicts a mean, \( \mu \), and "error", \( \epsilon \),
@@ -80,6 +81,13 @@
         the label for the sparse point cloud.
     </div>
 </div>
+
+
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
+    <p>Joint work with <a class="weblink" href="http://cs.uky.edu/~jacobs/">Nathan Jacobs</a>
+    and Hunter Blanton.</p>
+</footer>
 
 </body>
 
