--- a/visualizations.html
+++ b/visualizations.html
@@ -91,6 +91,11 @@
 </div>
 
 
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
+    <p></p>
+</footer>
+
 
 <script>
 var slideIndex = [1,1];
