--- a/assignments.html
+++ b/assignments.html
@@ -177,6 +177,13 @@ ol li {
 </div>
 
 
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
+    <p>Investigated with Jessica Appel, Michael Boyd, and Kathryn Schantz under
+    the mentorship of
+    <a class="weblink" href="http://www.ms.uky.edu/~kate/">Kate Ponto</a>.</p>
+</footer>
+
 
 <script>
 var slideIndex = [1,1];
