--- a/flightroute.html
+++ b/flightroute.html
@@ -163,6 +163,13 @@
 </div>
 
 
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
+    <p>Joint work with <a class="weblink" href="http://cs.uky.edu/~jacobs/">Nathan Jacobs</a>
+    and Hunter Blanton</p>.
+</footer>
+
+
 <script>
 var slideIndex = [1,1];
 /* Class the members of each slideshow group with different CSS classes */
