--- a/minecraft.html
+++ b/minecraft.html
@@ -114,6 +114,12 @@
 </div>
 
 
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
+    <p></p>
+</footer>
+
+
 <script>
 var slideIndex = [1,1];
 /* Class the members of each slideshow group with different CSS classes */
