Added gifs and thumbnail to Resampling page.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="./resampling.html">Point Cloud Resampling</a>
         </div>
-        <img src="/w3images/house5.jpg" alt="resampling" style="width:100%">
+        <img src="./images/resampling/plane.gif" alt="resampling" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
