Refactored js scripts, added links to repos, and updated CV.

--- a/heisenberg.html
+++ b/heisenberg.html
@@ -300,6 +300,7 @@
             </p>
     </div>
 </div>
+</div>
 
 
 </body>
@@ -308,32 +309,13 @@
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
     <p>Investigated with Angela Vichitbanda and Joe Cecil under the mentorship
-    of <a class="weblink" href="http://www.ms.uky.edu/~cama268/">Chris Manon</a>.</p>
+    of <a class="weblink" href="http://www.ms.uky.edu/~cama268/">Chris Manon</a>.
+    Code can be found <a class="weblink" href="https://github.com/UKYMathLab/Heisenberg">here</a>.</p>
 </footer>
 
 
-<script>
-var slideIndex = [1,1];
-/* Class the members of each slideshow group with different CSS classes */
-var slideId = ["slideshow1", "slideshow2"]
-showSlides(1, 0);
-showSlides(1, 1);
+<script src="./scripts/slideshows.js"></script>
 
-function plusSlides(n, no) {
-  showSlides(slideIndex[no] += n, no);
-}
-
-function showSlides(n, no) {
-  var i;
-  var x = document.getElementsByClassName(slideId[no]);
-  if (n > x.length) {slideIndex[no] = 1}
-  if (n < 1) {slideIndex[no] = x.length}
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";
-  }
-  x[slideIndex[no]-1].style.display = "block";
-}
-</script>
 
 
 
