--- a/assignments.html
+++ b/assignments.html
@@ -181,32 +181,12 @@ ol li {
 <footer class="w3-center w3-black w3-padding-16">
     <p>Investigated with Jessica Appel, Michael Boyd, and Kathryn Schantz under
     the mentorship of
-    <a class="weblink" href="http://www.ms.uky.edu/~kate/">Kate Ponto</a>.</p>
+    <a class="weblink" href="http://www.ms.uky.edu/~kate/">Kate Ponto</a>.
+    Code can be found <a class="weblink" href="https://github.com/UKYMathLab/Assignments">here</a>.</p>
 </footer>
 
 
-<script>
-var slideIndex = [1,1];
-/* Class the members of each slideshow group with different CSS classes */
-var slideId = ["slideshow1", "slideshow2"]
-showSlides(1, 0);
-showSlides(1, 1);
-
-function plusSlides(n, no) {
-  showSlides(slideIndex[no] += n, no);
-}
-
-function showSlides(n, no) {
-  var i;
-  var x = document.getElementsByClassName(slideId[no]);
-  if (n > x.length) {slideIndex[no] = 1}
-  if (n < 1) {slideIndex[no] = x.length}
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";
-  }
-  x[slideIndex[no]-1].style.display = "block";
-}
-</script>
+<script src="./scripts/slideshows.js"></script>
 
 </body>
 
