--- a/flightroute.html
+++ b/flightroute.html
@@ -170,28 +170,8 @@
 </footer>
 
 
-<script>
-var slideIndex = [1,1];
-/* Class the members of each slideshow group with different CSS classes */
-var slideId = ["slideshow1", "slideshow2"]
-showSlides(1, 0);
-showSlides(1, 1);
+<script src="./scripts/slideshows.js"></script>
 
-function plusSlides(n, no) {
-  showSlides(slideIndex[no] += n, no);
-}
-
-function showSlides(n, no) {
-  var i;
-  var x = document.getElementsByClassName(slideId[no]);
-  if (n > x.length) {slideIndex[no] = 1}
-  if (n < 1) {slideIndex[no] = x.length}
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";
-  }
-  x[slideIndex[no]-1].style.display = "block";
-}
-</script>
 
 </body>
 
