Added GitHub link to footer of Minecraft page.

--- a/minecraft.html
+++ b/minecraft.html
@@ -116,7 +116,7 @@
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-    <p></p>
+    <p>Code can be found <a class="weblink" href="https://github.com/TheGrateSalmon/ML_Minecraft">here</a>.</p>
 </footer>
 
 
