--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">About</h3>
     <img class="w3-image" src="./images/me.jpg" alt="me" width="200" height="240" style="padding: 0px 16px 0px 16px; float:left">
-    <p>I am a senior undergraduate at the University of Kentucky majoring in Mathematics with minors in Computer Science, History, and Classics.
-        My primary interests seem to lie in complex analysis and machine learning. I do research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
-        and also in <a class="weblink" href="http://cs.uky.edu/~jacobs/">Nathan Jacobs'</a> computer vision lab. I plan to graduate in Spring 2020 and study mathematics
-        in graduate school. A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information. Photo is courtesy of Nathan Jacobs.
+    <p>I am a recent graduate of the University of Kentucky earning a Bachelor of Science in Mathematics with minors in History and Classics.
+       My primary research interests seem to lie in complex analysis, geometry, and machine learning. 
+       While at the University of Kentucky, I conducted research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
+       and also as part of the <a class="weblink" href="http://mvrl.cs.uky.edu/">Multimodal Vision Research Laboratory</a>.
+       Beginning in Fall 2020, I will be a graduate student in Auburn University's Mathematics and Statistics Department.
+       A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information. 
+       Photo is courtesy of Nathan Jacobs.
     </p>
   </div>
 
@@ -54,28 +57,20 @@
   </div>
 
   <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
+    <!-- <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="./resampling.html">Point Cloud Resampling</a>
         </div>
         <img src="./images/resampling/plane.gif" alt="resampling" style="width:100%">
       </div>
-    </div>
+    </div> -->
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
           <div class="w3-display-topleft w3-black">
             <a class="w3-button w3-black" href="./heisenberg.html">Discrete Heisenberg Group</a>
           </div>
         <img src="./images/heisenberg/tetra_growth.gif" alt="heisenberg" style="width:100%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black">
-          <a class="w3-button w3-black" href="./assignments.html">TA Assignments</a>
-        </div>
-        <img src="./images/assignments/assignments.PNG" alt="assignments" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
@@ -100,6 +95,14 @@
           <a class="w3-button w3-black" href="./visualizations.html">Visualizing Algebraic Surfaces</a>
         </div>
         <img src="./images/visualizations/clebsh1.jpg" alt="Clebsh 27 lines" style="width:100%" image-orientation=from-image>
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black">
+          <a class="w3-button w3-black" href="./assignments.html">TA Assignments</a>
+        </div>
+        <img src="./images/assignments/assignments.PNG" alt="assignments" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
