--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 <title>Sean Grate</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<!--Taken from "https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_architect&stacked=h"-->
 
-<style>
-.weblink {
-    color:blue;
-    text-decoration:none;
-}
+<head>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <!--Taken from "https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_architect&stacked=h"-->
+  
+  <link rel="stylesheet" type="text/css" href="./styles/weblinks.css">
+</head>
 
-.weblink:hover {
-    text-decoration:underline
-}
-</style>
 
 <body>
 
