--- a/flightroute.html
+++ b/flightroute.html
@@ -3,35 +3,20 @@
 <title>Estimating Flight Routes</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<!--Taken from "https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_architect&stacked=h"-->
 
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-<style>
-.weblink {
-    color:blue;
-    text-decoration:none;
-}
-
-.weblink:hover {
-    text-decoration:underline
-}
-</style>
-
-<style>
-.slideshow1 {display:none;}
-</style>
-
-<style>
-.slideshow2 {display:none;}
-</style>
-
+<head>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!--Taken from "https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_architect&stacked=h"-->
+    
+    <link rel="stylesheet" type="text/css" href="./styles/weblinks.css">
+    <link rel="stylesheet" type="text/css" href="./styles/slideshows.css">
+</head>
 
 
 <body>
-
 
 
 <!--Top navigation bar-->
